@@ -27,7 +27,6 @@ import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
@@ -72,7 +71,7 @@ public class LocaleManager {
                     throw new RuntimeException(e);
                 }
             } else {
-                return Collections.emptyMap();
+                return Map.of();
             }
         });
     }
